[package]
name = "mblog-backend-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"        # 体积优先
lto = "thin"           # 或 true（更小但更慢）
codegen-units = 1
panic = "abort"
strip = true           # Rust 1.59+ 生效

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rss = "2"
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-actix-native-tls", "macros", "with-chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
once_cell = "1"
thiserror = "1"
rand = "0.8"
jsonwebtoken = "9"
bcrypt = "0.15"
futures-util = "0.3"
env_logger = "0.11"
actix-service = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
log = "0.4"
regex = "1"
actix-multipart = "0.6"
md-5 = "0.10"
mime_guess = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt"] }
infer = "0.16"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-types = "1"
